# jbigkit

./: .gitignore  CMakeLists.txt
libjbig/: jbig.c  jbig85.c
